crates/icydb-core/tests/ui/db/executor/load_module_private.stderr
error[E0603]: module `executor` is private
 --> tests/ui/db/executor/load_module_private.rs:1:21
  |
1 | use icydb_core::db::executor::load::LoadExecutor;
  |                     ^^^^^^^^  ---- module `load` is not publicly re-exported
  |                     |
  |                     private module
  |
note: the module `executor` is defined here
 --> src/db/mod.rs
  |
  | pub(in crate::db) mod executor;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
